@@ -21,7 +21,7 @@ include_uriparser_HEADERS = \
 
 
 
-liburiparser_la_LDFLAGS = -version-info 1:3:0
+liburiparser_la_LDFLAGS = -version-info 1:4:0
 
 liburiparser_la_SOURCES = \
 	lib/UriCommon.c \
@@ -99,7 +99,8 @@ EXTRA_DIST = \
 	win32/Code_Blocks/test.cbp \
 	win32/Code_Blocks/uriparser.cbp \
 	\
+	win32/MinGW/Makefile \
+	\
 	win32/Visual_Studio_2005/test.vcproj \
 	win32/Visual_Studio_2005/uriparser.sln \
 	win32/Visual_Studio_2005/uriparser.vcproj
-
